# robotarm

./: .gitignore  readme.md
CanBusTest/: CMakeLists.txt  CanBusTest.cpp  CanBusTest.h  CanBusTest.ui  CanOpen.h  main.cpp
ROS_WS/: frames_2026-06-12_11.34.08.gv
ROS_WS/src/adi_4dof_endeffector_xyz/: CMakeLists.txt
ROS_WS/src/adi_4dof_endeffector_xyz/src/: endeffector_listener.cpp  endeffector_xyz.cpp
ROS_WS/src/adi_4dof_ik/adi_4dof_ik/: CMakeLists.txt  package.xml
ROS_WS/src/adi_4dof_ik/adi_4dof_ik_kinematics_plugin/: CMakeLists.txt
ROS_WS/src/adi_4dof_ik/adi_4dof_ik_kinematics_plugin/include/adi_4dof_ik/: SerialRobot.hpp  adi_4dof_ik_kinematics_plugin.hpp
ROS_WS/src/adi_4dof_ik/adi_4dof_ik_kinematics_plugin/src/: SerialRobot.cpp  adi_4dof_ik_kinematics_plugin.cpp
ROS_WS/src/adi_robotarm/: CMakeLists.txt
ROS_WS/src/adi_robotarm/urdf/: adi_robotarm.urdf
ROS_WS/src/adi_robotarm_moveit_config/: .setup_assistant  CMakeLists.txt
ROS_WS/src/adi_robotarm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  visual.srdf
ROS_WS/src/adi_robotarm_moveit_config/launch/: moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ROS_WS/src/adi_tmcm_bb4/: CMakeLists.txt
ROS_WS/src/adi_tmcm_bb4/include/adi_tmcm_bb4/: CanOpen.hpp  Tmcm1637CanOpen.hpp  TmcmBb4CanOpen.hpp
ROS_WS/src/adi_tmcm_bb4/src/: CanOpen.cpp  Tmcm1637CanOpen.cpp  TmcmBb4CanOpen.cpp  tmcm_bb4_canopen.cpp
ROS_WS/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS_WS/src/install/adi_4dof_endeffector_xyz/lib/adi_4dof_endeffector_xyz/: endeffector_xyz
ROS_WS/src/install/adi_4dof_endeffector_xyz/share/adi_4dof_endeffector_xyz/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS_WS/src/install/adi_4dof_endeffector_xyz/share/adi_4dof_endeffector_xyz/cmake/: adi_4dof_endeffector_xyzConfig.cmake
ROS_WS/src/install/adi_4dof_ik/share/adi_4dof_ik/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS_WS/src/install/adi_4dof_ik_kinematics_plugin/share/adi_4dof_ik_kinematics_plugin/: adi_4dof_ik_kinematics_description.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS_WS/src/install/adi_4dof_ik_kinematics_plugin/share/adi_4dof_ik_kinematics_plugin/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake
ROS_WS/src/install/adi_robotarm/share/adi_robotarm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS_WS/src/install/adi_robotarm/share/adi_robotarm/launch/: display.launch.py
ROS_WS/src/install/adi_robotarm/share/adi_robotarm/rviz/: urdf.rviz
ROS_WS/src/install/adi_robotarm_moveit_config/share/adi_robotarm_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS_WS/src/install/adi_tmcm_bb4/share/adi_tmcm_bb4/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS_WS/src/install/moveit_servo/share/moveit_servo/: .setup_assistant  local_setup.dsv  package.dsv  package.ps1  package.sh
ROS_WS/src/install/point_motion/lib/point_motion/: point_motion
ROS_WS/src/install/vision_tracker/share/vision_tracker/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS_WS/src/log/: latest_build
ROS_WS/src/moveit_3dof/: .setup_assistant  CMakeLists.txt  package.xml
ROS_WS/src/moveit_3dof/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo_parameters.yaml  visual.srdf
ROS_WS/src/moveit_3dof/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  robot_only.launch.py  robot_start.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  tutorial.launch.py  warehouse_db.launch.py
ROS_WS/src/moveit_3dof/scripts/: frames_2026-06-22_10.28.51.gv  hotspot.py  hotspot_detector.py  hotspot_servo.py  hotspot_visual_servo.py  hotspot_welding.py  keyboard.py  return_to_zero.py  safety_node.py  safety_supervisor.py  send_twist.py  tip_velocity_control.py
ROS_WS/src/moveit_3dof/urdf/: robotarm.urdf
ROS_WS/src/point_motion/: CMakeLists.txt
ROS_WS/src/point_motion/launch/: point_tracker.launch.py  vision_servo.launch.py
ROS_WS/src/point_motion/src/: point_following_2d.cpp  point_motion.cpp  point_motion_path.cpp
ROS_WS/src/robot_moveit_config/: .setup_assistant  package.xml
ROS_WS/src/robot_moveit_config/config/: joint_limits.yaml  ros2_controllers.yaml  servo_parameters.yaml  visual.ros2_control.xacro  visual.srdf
ROS_WS/src/robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ROS_WS/src/robotarm_fake_hardware/: CMakeLists.txt  package.xml  robotarm_fake_hardware.xml
ROS_WS/src/robotarm_fake_hardware/include/robotarm_fake_hardware/: velocity_fake_system.hpp
ROS_WS/src/robotarm_fake_hardware/src/: velocity_fake_system.cpp
ROS_WS/src/robotarm_hardware/: CMakeLists.txt  package.xml  robotarm_hardware.xml
ROS_WS/src/robotarm_hardware/include/robotarm_hardware/: robotarm_system.hpp
ROS_WS/src/robotarm_hardware/src/: robotarm_system.cpp
ROS_WS/src/vision_tracker/: setup.cfg  setup.py
ROS_WS/src/vision_tracker/vision_tracker/: hotspot_tracker.py  publish_movement.py  servo.py
RobotArmKinematic/: CMakeLists.txt  RobotArmKinematic.cpp  RobotArmKinematic.h  RobotArmKinematic.ui  SerialRobot.cpp  SerialRobot.h  UrdfHandler.cpp  UrdfHandler.h  XrdfHandler.cpp  XrdfHandler.h  main.cpp
TmcmBb4/: CMakeLists.txt  CanOpen.cpp  Tmcm1637CanOpen.cpp  Tmcm1637CanOpen.h  TmcmBb4.cpp  TmcmBb4.h  TmcmBb4.qrc  TmcmBb4.ui  main.cpp
(+33 files in other folders)
