<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>vision_tracker</name>
  <version>0.0.0</version>
  <description>Vision-based hotspot tracking node</description>

  <maintainer email="michaelasteinklw@t-online.de">micha</maintainer>
  <license>MIT</license>

  <!-- BUILD SYSTEM -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- RUNTIME DEPENDENCIES -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
